fix spacing in ecombasketsummary

--- a/less/plugins/plugin-ecommerce.less
+++ b/less/plugins/plugin-ecommerce.less
@@ -493,6 +493,9 @@
 
 .ecombasketsummary .summary-title {
     padding-bottom: 35px;
+    @media @tablet {
+        padding-bottom: 10px;
+    }
 }
 
 // Table
